# LazyMCPanel

./: .gitignore  README.md  pyproject.toml
docs/: quick-start.md
src/lmcp/: __init__.py  __main__.py  __version__.py  cli.py
src/lmcp/assests/containers/jre21-python312/: Dockerfile
src/lmcp/assests/containers/jre8-python312/: Dockerfile
src/lmcp/assets/containers/: entrypoint.sh
src/lmcp/assets/containers/jre21-py312/: Dockerfile
src/lmcp/assets/containers/jre8-py312/: Dockerfile
src/lmcp/core/: builder.py  config.py  initializer.py  logger.py  orchestrator.py  types.py
src/lmcp/schemas/: config.py
tmp/: lmcp.yaml
